--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
     "@nuxt/icon": "^1.12.0",
+    "autoprefixer": "^10.4.21",
     "nuxt": "^3.8.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
