--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
     "@nuxt/icon": "^1.12.0",
+    "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.21",
     "nuxt": "^3.8.2",
     "postcss": "^8.5.3",
@@ -19,7 +20,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5"
+    "@tailwindcss/vite": "^4.1.5",
+    "three": "^0.176.0"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
